--- a/JaVisteAMinhaMedia/app/src/main/res/values/strings.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="firstYear">1º Ano</string>
     <string name="secondYear">2º Ano</string>
     <string name="thirdYear">3º Ano</string>
+    <string name="nav_grades">Notas</string>
+    <string name="nav_prediction">Previsão</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
