--- a/JaVisteAMinhaMedia/app/src/main/res/values/strings.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="nav_prediction">Previsão</string>
     <string name="tb_branch">Ramo</string>
     <string name="tb_pretended_average">Media Pretendida</string>
+    <string name="invalid_inserted_grade">Nota inserida inválida</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
