--- a/JaVisteAMinhaMedia/app/src/main/res/values/strings.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="TextCurrentAverage">A sua media atual: </string>
     <string name="TextBolognaAverage">A sua média de bolonha: </string>
     <string name="TextPretendedAverage">Pretende alcançar media de:</string>
-    <string name="InfoBolognaAverage">Para o conseguir fazer deve alcançar as seguintes notas:</string>
+    <string name="prediciton_grades_info">Para o conseguir fazer deve alcançar as seguintes notas:</string>
+    <string name="prediciton_grades_error">De forma a conseguirmos criar uma previsão realista precisamos de mais cadeiras acabadas com sucesso</string>
     <string name="firstSemester">1º Semestre</string>
     <string name="secondSemester">2º Semestre</string>
     <string name="firstYear">1º Ano</string>
